@@ -1,6 +1,5 @@
 package io.contek.invoker.binancespot.api.rest.market;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.binancespot.api.common._ExchangeInfo;
 import io.contek.invoker.binancespot.api.rest.market.GetExchangeInfo.Response;
 import io.contek.invoker.commons.actor.IActor;
@@ -9,14 +8,15 @@ import io.contek.invoker.commons.rest.RestContext;
 import io.contek.invoker.commons.rest.RestParams;
 
 import javax.annotation.concurrent.NotThreadSafe;
+import java.util.List;
 
 import static io.contek.invoker.binancespot.api.ApiFactory.RateLimits.IP_REST_REQUEST_RULE;
 
 @NotThreadSafe
 public final class GetExchangeInfo extends MarketRestRequest<Response> {
 
-  private static final ImmutableList<TypedPermitRequest> REQUIRED_QUOTA =
-      ImmutableList.of(IP_REST_REQUEST_RULE.forPermits(10));
+  private static final List<TypedPermitRequest> REQUIRED_QUOTA =
+      List.of(IP_REST_REQUEST_RULE.forPermits(10));
 
   GetExchangeInfo(IActor actor, RestContext context) {
     super(actor, context);
@@ -38,7 +38,7 @@ public final class GetExchangeInfo extends MarketRestRequest<Response> {
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
     return REQUIRED_QUOTA;
   }
 
