@@ -1,6 +1,5 @@
 package io.contek.invoker.binancespot.api.rest.user.margin;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.binancespot.api.common._Order;
 import io.contek.invoker.binancespot.api.rest.user.UserRestRequest;
 import io.contek.invoker.binancespot.api.rest.user.margin.DeleteOrder.Response;
@@ -11,9 +10,9 @@ import io.contek.invoker.commons.rest.RestMethod;
 import io.contek.invoker.commons.rest.RestParams;
 
 import javax.annotation.concurrent.NotThreadSafe;
+import java.util.List;
+import java.util.Objects;
 
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkNotNull;
 import static io.contek.invoker.binancespot.api.ApiFactory.RateLimits.IP_REST_REQUEST_RULE;
 import static io.contek.invoker.commons.rest.RestMethod.DELETE;
 
@@ -68,10 +67,12 @@ public final class DeleteOrder extends UserRestRequest<Response> {
   protected RestParams getParams() {
     RestParams.Builder builder = RestParams.newBuilder();
 
-    checkNotNull(symbol);
+    Objects.requireNonNull(symbol);
     builder.add("symbol", symbol);
 
-    checkArgument(orderId != null || origClientOrderId != null);
+    if (orderId == null && origClientOrderId == null) {
+      throw new IllegalArgumentException();
+    }
     if (orderId != null) {
       builder.add("orderId", orderId);
     }
@@ -88,8 +89,8 @@ public final class DeleteOrder extends UserRestRequest<Response> {
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
-    return ImmutableList.of(IP_REST_REQUEST_RULE.forPermits(10));
+  protected List<TypedPermitRequest> getRequiredQuotas() {
+    return List.of(IP_REST_REQUEST_RULE.forPermits(10));
   }
 
   @NotThreadSafe
